<resources>
    <string name="app_name">Baking App</string>

    <string name="sample_list_load_error">Error loading one or more samples!</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Recipe Fragment Fields -->
    <string name="ingredients_required">Required Ingredients: %1$d</string>

    <!-- Recipe Detail Fragment Fields -->
    <string name="btn_previous">Previous</string>
    <string name="btn_next">Next</string>
    <string name="empty_media_string">No media for this recipe step.</string>

    <!-- Widget Text -->
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="empty_widget_text">Please open the recipe step page to show ingredients</string>
    <string name="widget_ingredient_name">Ingredient:</string>
    <string name="widget_ingredient_quantity">Quantity:</string>
    <string name="widget_ingredient_measure">Measure:</string>

</resources>
